--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "prisma db push && prisma generate && vite build",
+		"postinstall": "prisma generate",
+		"vercel-build": "prisma migrate deploy && prisma generate",
+		"build": "vite build",
 		"preview": "vite preview",
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
