--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"postinstall": "prisma generate",
-		"vercel-build": "prisma migrate deploy && prisma generate",
+		"vercel-build": "prisma db push && prisma generate",
 		"build": "vite build",
 		"preview": "vite preview",
 		"test": "npm run test:integration && npm run test:unit",
