--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@sveltejs/adapter-vercel": "^3.0.3",
 		"@sveltejs/kit": "^1.20.4",
 		"@tailwindcss/typography": "^0.5.10",
+		"@types/quill": "^2.0.13",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.16",
@@ -33,12 +34,15 @@
 		"flowbite": "^1.8.1",
 		"flowbite-svelte": "^0.44.18",
 		"postcss": "^8.4.31",
+		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.6",
 		"prisma": "^5.5.2",
+		"sass": "^1.69.5",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-preprocess": "^5.0.4",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -51,10 +55,35 @@
 		"@iconify/svelte": "^3.1.4",
 		"@lucia-auth/adapter-prisma": "^3.0.2",
 		"@prisma/client": "5.5.2",
+		"@tiptap/core": "^2.1.12",
+		"@tiptap/extension-code": "^2.1.12",
+		"@tiptap/extension-code-block": "^2.1.12",
+		"@tiptap/extension-code-block-lowlight": "^2.1.12",
+		"@tiptap/extension-color": "^2.1.12",
+		"@tiptap/extension-dropcursor": "^2.1.12",
+		"@tiptap/extension-gapcursor": "^2.1.12",
+		"@tiptap/extension-history": "^2.1.12",
+		"@tiptap/extension-image": "^2.1.12",
+		"@tiptap/extension-link": "^2.1.12",
+		"@tiptap/extension-text-align": "^2.1.12",
+		"@tiptap/extension-text-style": "^2.1.12",
+		"@tiptap/extension-underline": "^2.1.12",
+		"@tiptap/pm": "^2.1.12",
+		"@tiptap/starter-kit": "^2.1.12",
+		"@toast-ui/editor": "^3.2.2",
+		"@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
+		"@types/sanitize-html": "^2.9.3",
 		"@upstash/ratelimit": "^0.4.4",
 		"@upstash/redis": "^1.24.2",
+		"color2k": "^2.0.2",
+		"highlight.js": "^11.9.0",
+		"lexical": "^0.12.2",
+		"lowlight": "^3.1.0",
 		"lucia": "^2.7.2",
+		"quill": "^1.3.7",
+		"sanitize-html": "^2.11.0",
 		"svelte-exmarkdown": "^3.0.1",
+		"svelte-quill": "^1.2.0",
 		"svelte-turnstile": "^0.5.0"
 	}
 }
